--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'MyFont';
     src:  url('./my-font1.ttf') format('woff2'), url('./my-font2.otf') format('woff');
     font-weight: 600;
@@ -9,4 +9,7 @@ font-style: normal;
     color: red;
     background: url('./batman.svg');
     font-family: 'MyFont';
+} */
+body {
+    background: yellowgreen;
 }
